--- a/.github/workflows/checkupdates3.yml
+++ b/.github/workflows/checkupdates3.yml
@@ -121,14 +121,10 @@ jobs:
           echo "Git configuration complete."
           echo "::endgroup::"
 
-      - name: Run Arch Package Update and Build Task # Refactored Debugging
+      - name: Run Arch Package Update and Build Task # Standardize Log Func Calls
         shell: bash
         run: |
           #!/bin/bash
-          # Removed 'set -x' for less verbosity. 
-          # 'set -e' exits on error.
-          # 'set -u' exits on unbound variable.
-          # 'set -o pipefail' exits if any command in a pipeline fails.
           set -euo pipefail 
           echo "::notice title=SCRIPT_START::Arch Package Update Task started."
 
@@ -136,40 +132,39 @@ jobs:
           _log_notice() { echo "::notice title=$1::$2"; }
           _log_error() { echo "::error title=$1::$2"; }
           _log_warning() { echo "::warning title=$1::$2"; }
-          # Use ::debug:: for verbose output, enable via ACTIONS_STEP_DEBUG=true secret/variable
-          _log_debug_verbose() { echo "::debug::$1"; } 
+          _log_debug() { echo "::debug::$1"; } # Changed from _log_debug_verbose for more general use
           _start_group() { echo "::group::$1"; }
-          _end_raw_group() { echo "::endgroup::"; } # Renamed to avoid conflict if user defines _end_group
+          _end_group() { echo "::endgroup::"; } # Standardized name
           _log_notice "HELPER_DEF" "Helper functions defined."
 
           # --- Configuration & Constants ---
-          BUILDER_HOME="/home/builder"
-          NVCHECKER_RUN_DIR="${BUILDER_HOME}/nvchecker-run"
-          ARTIFACTS_DIR="${GITHUB_WORKSPACE}/artifacts"
-          PACKAGE_DETAILS_JSON_PATH="${NVCHECKER_RUN_DIR}/package_details.json" 
+          _log_notice "VARS_CONSTANTS" "Defining constants..."
+          BUILDER_HOME="/home/builder"; NVCHECKER_RUN_DIR="${BUILDER_HOME}/nvchecker-run"; ARTIFACTS_DIR="${GITHUB_WORKSPACE}/artifacts"; PACKAGE_DETAILS_JSON_PATH="${NVCHECKER_RUN_DIR}/package_details.json" 
           _log_notice "VARS_CONSTANTS" "BUILDER_HOME=${BUILDER_HOME}, NVCHECKER_RUN_DIR=${NVCHECKER_RUN_DIR}"
+
 
           # --- Function Definitions ---
           setup_environment() {
               _start_group "Setup Environment"
               _log_notice "SETUP_ENV" "Configuring environment in ${NVCHECKER_RUN_DIR}..."
-              if ! sudo -u builder mkdir -p "${NVCHECKER_RUN_DIR}"; then _log_error "SETUP_FAIL" "mkdir NVCHECKER_RUN_DIR failed."; _end_raw_group; return 1; fi
-              if ! mkdir -p "${ARTIFACTS_DIR}"; then _log_error "SETUP_FAIL" "mkdir ARTIFACTS_DIR failed."; _end_raw_group; return 1; fi
+              if ! sudo -u builder mkdir -p "${NVCHECKER_RUN_DIR}"; then _log_error "SETUP_FAIL" "mkdir NVCHECKER_RUN_DIR failed."; _end_group; return 1; fi
+              if ! mkdir -p "${ARTIFACTS_DIR}"; then _log_error "SETUP_FAIL" "mkdir ARTIFACTS_DIR failed."; _end_group; return 1; fi
               cd "${NVCHECKER_RUN_DIR}"
+              _log_debug "Now in $(pwd)."
               
               local all_ok=true
               for script_to_copy in "buildscript.py" "compare_aur_local_versions.py"; do 
                   local script_source_path; script_source_path=$(find "${GITHUB_WORKSPACE}/scripts/" -name "${script_to_copy}" -type f -print -quit 2>/dev/null)
                   if [ -n "${script_source_path}" ] && [ -f "${script_source_path}" ]; then
                       if sudo -u builder cp "${script_source_path}" "./${script_to_copy}" && sudo -u builder chmod +x "./${script_to_copy}"; then
-                         _log_debug_verbose "Copied & chmodded ${script_to_copy} to $(pwd)."
+                         _log_debug "Copied & chmodded ${script_to_copy} to $(pwd)."
                       else _log_error "SETUP_FAIL" "cp/chmod failed for ${script_to_copy}."; all_ok=false; fi
                   else _log_error "SETUP_FAIL" "${script_to_copy} not found in ${GITHUB_WORKSPACE}/scripts/."; all_ok=false; fi
               done
               
-              if ! ${all_ok}; then _log_error "SETUP_ENV_FINAL_FAIL" "Script setup failed."; _end_raw_group; return 1; fi
+              if ! ${all_ok}; then _log_error "SETUP_ENV_FINAL_FAIL" "Script setup failed."; _end_group; return 1; fi
               _log_notice "SETUP_ENV" "Environment setup SUCCEEDED."
-              _end_raw_group; return 0 
+              _end_group; return 0 
           }
 
           generate_nvchecker_config() {
@@ -181,99 +176,86 @@ jobs:
               
               local individual_configs=(); mapfile -t individual_configs < <(find "${GITHUB_WORKSPACE}" -path "*/maintain/build/*/.nvchecker.toml" -type f -print)
               if [ ${#individual_configs[@]} -gt 0 ]; then
-                  _log_debug_verbose "Appending ${#individual_configs[@]} individual .nvchecker.toml files."
+                  _log_debug "Appending ${#individual_configs[@]} individual .nvchecker.toml files."
                   for cf in "${individual_configs[@]}"; do cat "${cf}" >> "${cfg}"; echo "" >> "${cfg}"; done
               else _log_warning "NV_CONF" "No individual .nvchecker.toml files found to append."; fi
               
-              if ! chown builder:builder "${cfg}" "${keyf}"; then _log_error "NV_CONF_FAIL" "chown for ${cfg}/${keyf} FAILED. Exit: $?."; _end_raw_group; return 1; fi
+              if ! chown builder:builder "${cfg}" "${keyf}"; then _log_error "NV_CONF_FAIL" "chown for ${cfg}/${keyf} FAILED. Exit: $?."; _end_group; return 1; fi
               _log_notice "NV_CONF" "NVChecker configuration generated successfully."
-              _end_raw_group; return 0
+              _end_group; return 0
           }
 
-          # --- run_compare_aur_local_versions (REAL IMPLEMENTATION - Corrected Call) ---
           run_compare_aur_local_versions() {
-              _start_raw_group "DEBUG: run_compare_aur_local_versions"
-              _log_raw_notice "COMPARE_AUR_START" "Attempting to run REAL compare_aur_local_versions.py..."
+              _start_group "Compare AUR vs Local Versions (Generates aur.json)"
+              _log_notice "COMPARE_AUR" "Running compare_aur_local_versions.py..."
+              local script="./compare_aur_local_versions.py"
+              local outfile="aur.json" 
+
+              if [ ! -f "${script}" ]; then _log_error "COMPARE_AUR_FAIL" "${script} not found in $(pwd)!"; _end_group; return 1; fi
               
-              local compare_script_path="./compare_aur_local_versions.py" 
-              # The python script will create aur.json (and others) in the current directory.
-              local expected_aur_json_output="aur.json" 
-
-              if [ ! -f "${compare_script_path}" ]; then
-                  _log_raw_error "COMPARE_AUR_MISSING_SCRIPT" "Python script ${compare_script_path} not found in $(pwd)!"
-                  _end_raw_group; return 1
-              fi
-
-              _log_raw_debug "Executing as builder: python3 ${compare_script_path} --maintainer \"${AUR_MAINTAINER_NAME}\" --repo-root \"${GITHUB_WORKSPACE}\""
-              
-              local python_stderr_file; python_stderr_file=$(mktemp)
-
-              # REMOVED --output-file from this call
-              if sudo -E -u builder python3 "${compare_script_path}" \
+              _log_debug "Executing: sudo -E -u builder python3 ${script} --maintainer ${AUR_MAINTAINER_NAME} --repo-root ${GITHUB_WORKSPACE}"
+              local stderr_log; stderr_log=$(mktemp)
+              if sudo -E -u builder python3 "${script}" \
                   --maintainer "${AUR_MAINTAINER_NAME}" \
                   --repo-root "${GITHUB_WORKSPACE}" \
-                  2> "${python_stderr_file}"; then # stderr is captured to the temp file
-                  _log_raw_notice "COMPARE_AUR_PYTHON_SUCCESS" "compare_aur_local_versions.py executed successfully."
+                  2> "${stderr_log}"; then # Python script creates aur.json (and others) in CWD
                   
-                  # Check if the primary expected output file (aur.json) was created and is not empty
-                  if [ -s "${expected_aur_json_output}" ]; then 
-                     _log_raw_debug "Contents of generated ${expected_aur_json_output}:"
-                     head -n 20 "${expected_aur_json_output}" | while IFS= read -r line; do _log_raw_debug "  ${expected_aur_json_output}: $line"; done
-                     _log_raw_debug "  ${expected_aur_json_output}: ... (potentially more lines) Total size: $(wc -c < "${expected_aur_json_output}") bytes"
-                     # Ensure builder owns the output file(s) created by the script (which ran as builder)
-                     # This chown might be redundant if sudo -E -u builder python3 ... already creates them as builder.
-                     # But it's good for ensuring consistency if any files were accidentally created as root by sub-processes.
+                  if [ -s "${outfile}" ]; then 
+                     _log_notice "COMPARE_AUR" "${outfile} generated successfully (Size: $(wc -c < "${outfile}") bytes)."
+                     _log_debug "aur.json Head: $(head -n 5 "${outfile}")"
                      if ! sudo -u builder chown builder:builder aur.json local.json changes.json combined.json 2>/dev/null; then 
-                         _log_raw_warning "COMPARE_AUR_CHOWN_WARN" "Could not chown one or more output files (aur.json, local.json, changes.json, combined.json) to builder. This is usually okay if they are already builder-owned."
+                         _log_warning "COMPARE_AUR" "Could not chown one or more output files to builder (may be okay)."
                      fi
-                  else
-                     _log_raw_warning "COMPARE_AUR_MISSING_EXPECTED_OUTPUT" "${expected_aur_json_output} was NOT created or is EMPTY after script execution."
-                     # Check stderr even on "success" if primary output is missing
-                     if [ -s "${python_stderr_file}" ]; then
-                        _log_raw_warning "COMPARE_AUR_PYTHON_STDERR_ON_SUCCESS_BUT_EMPTY_OUTPUT" "Stderr from python script (despite exit 0):"
-                        cat "${python_stderr_file}" | while IFS= read -r line; do _log_raw_warning "  py_stderr: $line"; done
+                  else 
+                     _log_warning "COMPARE_AUR" "${outfile} was expected but is empty or not found after script run. Check python script logic."
+                     if [ -s "${stderr_log}" ]; then
+                        _log_warning "COMPARE_AUR_PY_STDERR" "Stderr from python script (despite exit 0):"
+                        cat "${stderr_log}" | while IFS= read -r line; do _log_warning "PY_STDERR_LINE" "  $line"; done
                      fi
                   fi
               else
-                  local python_exit_code=$?
-                  _log_raw_error "COMPARE_AUR_PYTHON_FAILED" "compare_aur_local_versions.py FAILED with exit code ${python_exit_code}."
-                  _log_raw_error "COMPARE_AUR_PYTHON_STDERR" "Stderr from python script:"
-                  cat "${python_stderr_file}" | while IFS= read -r line; do _log_raw_error "  py_stderr: $line"; done
-                  rm "${python_stderr_file}"
-                  _end_raw_group; return 1
+                  local exit_c=$?
+                  _log_error "COMPARE_AUR_FAIL" "compare_aur_local_versions.py FAILED (Exit: ${exit_c}). Stderr:"
+                  cat "${stderr_log}" | while IFS= read -r line; do _log_error "PYTHON_STDERR" "  $line"; done
+                  rm "${stderr_log}"; _end_group; return 1
               fi
-              rm "${python_stderr_file}" # Clean up stderr file on success too
-              _log_raw_notice "COMPARE_AUR_END" "run_compare_aur_local_versions SUCCEEDED."
-              _end_raw_group; return 0
+              rm "${stderr_log}"
+              _log_notice "COMPARE_AUR" "compare_aur_local_versions.py SUCCEEDED."
+              _end_group; return 0
           }
 
           run_version_checks() {
-              _start_raw_group "Run Version Checks (nvchecker, nvcmp)"
+              _start_group "Run Version Checks (nvchecker, nvcmp)"
               _log_notice "VER_CHECKS" "Running nvchecker & nvcmp..."
               if [ ! -f "new.toml" ] || [ ! -f "keyfile.toml" ] || [ ! -f "aur.json" ]; then 
-                  _log_error "VER_CHECKS_FAIL" "Missing new.toml, keyfile.toml, or aur.json for version checks."; _end_raw_group; return 1; 
+                  _log_error "VER_CHECKS_FAIL" "Missing new.toml, keyfile.toml, or aur.json for version checks."; _end_group; return 1; 
               fi
 
-              _log_debug_verbose "Running nvchecker..."
+              _log_debug "Running nvchecker..."
               if sudo -E -u builder nvchecker -c new.toml -k keyfile.toml --logger json > local.json; then
                  _log_notice "VER_CHECKS" "nvchecker OK. local.json size: $(wc -c < local.json) bytes."
-                 _log_debug_verbose "local.json Head: $(head -n 5 local.json)"
-              else _log_error "VER_CHECKS_FAIL" "nvchecker FAILED (Exit: $?)."; _end_raw_group; return 1; fi
+                 _log_debug "local.json Head: $(head -n 5 local.json)"
+              else _log_error "VER_CHECKS_FAIL" "nvchecker FAILED (Exit: $?)."; _end_group; return 1; fi
               
-              _log_debug_verbose "Running nvcmp..."
+              _log_debug "Running nvcmp..."
+              # Ensure changes.json is builder-owned if created by builder
               if sudo -E -u builder nvcmp -c new.toml > changes.json; then
+                 # sudo -u builder chown builder:builder changes.json # If needed, but output redirection might make it root owned
+                 # It's better if nvcmp output can be tee'd to a builder owned file like so:
+                 # sudo -E -u builder nvcmp -c new.toml | sudo -u builder tee changes.json > /dev/null
+                 # For now, let's assume output redirection creates it as root, and jq (run as root) can read it.
                  _log_notice "VER_CHECKS" "nvcmp OK. changes.json size: $(wc -c < changes.json) bytes."
-                 _log_debug_verbose "changes.json Head: $(head -n 5 changes.json)"
-              else _log_error "VER_CHECKS_FAIL" "nvcmp FAILED (Exit: $?)."; _end_raw_group; return 1; fi
+                 _log_debug "changes.json Head: $(head -n 5 changes.json)"
+              else _log_error "VER_CHECKS_FAIL" "nvcmp FAILED (Exit: $?)."; _end_group; return 1; fi
               _log_notice "VER_CHECKS" "Version checks (nvchecker, nvcmp) SUCCEEDED."
-              _end_raw_group; return 0
+              _end_group; return 0
           }
           
           get_package_updates_list() {
               _start_group "Get Package Updates List"
               _log_notice "GET_UPDATES" "Determining packages to update from changes.json and nvcmp -q..."
               if [ ! -f "changes.json" ] || [ ! -f "new.toml" ]; then 
-                  _log_error "GET_UPDATES_FAIL" "Missing changes.json or new.toml."; _end_raw_group; return 1; 
+                  _log_error "GET_UPDATES_FAIL" "Missing changes.json or new.toml."; _end_group; return 1; 
               fi
 
               local upgrades_from_changes=() 
@@ -281,18 +263,20 @@ jobs:
               
               if [ -s "changes.json" ]; then 
                   local jq_err_log; jq_err_log=$(mktemp)
+                  _log_debug "Parsing changes.json with jq..."
                   if mapfile -t upgrades_from_changes < <(jq -r 'to_entries | map(select(.value.status == "upgrade") | .key) | .[]' changes.json 2> "${jq_err_log}"); then
-                      _log_debug_verbose "jq parsed changes.json successfully."
+                      _log_debug "jq parsed changes.json successfully."
                   else
                       _log_warning "GET_UPDATES" "jq command for changes.json may have failed (Exit: $?). Stderr:"
                       cat "${jq_err_log}" | while IFS= read -r line; do _log_warning "JQ_STDERR" "  $line"; done
                   fi
                   rm "${jq_err_log}"
               else _log_warning "GET_UPDATES" "changes.json is empty."; fi
-              _log_debug_verbose "Found ${#upgrades_from_changes[@]} upgrades from changes.json."
+              _log_debug "Found ${#upgrades_from_changes[@]} upgrades from changes.json."
               
+              _log_debug "Running nvcmp -q..."
               mapfile -t updates_from_nvcmp_q < <(sudo -E -u builder nvcmp -c new.toml -q 2>/dev/null || true)
-              _log_debug_verbose "Found ${#updates_from_nvcmp_q[@]} updates from nvcmp -q."
+              _log_debug "Found ${#updates_from_nvcmp_q[@]} updates from nvcmp -q."
               
               local temp_file; temp_file=$(mktemp)
               printf '%s\n' "${upgrades_from_changes[@]:-}" > "${temp_file}"
@@ -309,17 +293,17 @@ jobs:
                   printf '  ::notice title=Update Candidate::%s\n' "${UPDATES[@]}"
               fi
               _log_notice "GET_UPDATES" "Package update list generation SUCCEEDED."
-              _end_raw_group; return 0
+              _end_group; return 0
           }
 
           # --- Main Execution Flow ---
           _log_notice "MAIN_EXEC" "Starting main execution flow..."
           
-          if ! setup_environment; then exit 1; fi
-          if ! generate_nvchecker_config; then exit 1; fi
-          if ! run_compare_aur_local_versions; then exit 1; fi # Uses REAL python script
-          if ! run_version_checks; then exit 1; fi
-          if ! get_package_updates_list; then exit 1; fi
+          if ! setup_environment; then _log_error "MAIN_FAIL" "setup_environment FAILED."; exit 1; fi
+          if ! generate_nvchecker_config; then _log_error "MAIN_FAIL" "generate_nvchecker_config FAILED."; exit 1; fi
+          if ! run_compare_aur_local_versions; then _log_error "MAIN_FAIL" "run_compare_aur_local_versions FAILED."; exit 1; fi
+          if ! run_version_checks; then _log_error "MAIN_FAIL" "run_version_checks FAILED."; exit 1; fi
+          if ! get_package_updates_list; then _log_error "MAIN_FAIL" "get_package_updates_list FAILED."; exit 1; fi
 
           _log_notice "MAIN_EXEC" "All pre-build phases completed successfully."
           _log_notice "SCRIPT_PHASED_END" "Current test phase (up to get_package_updates_list) finished."
